# mmm-os

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODING_STANDARDS.md  Dockerfile  GIT_STANDARDS.md  README.md  alembic.ini  docker-compose.yml  llm.config.example.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
deploy/: RUNBOOK.md  entrypoint.sh
docs/: architecture.md  build-plan.md  canonical-schema.md  compliance-controls.md  data-model.md  open-questions.md  prd.md
docs/connectors/: dv360-mapping-template.md  google-ads-mapping-template.md  meta-mapping-template.md  tiktok-mapping-template.md
docs/design/: usability-reuse-model-readiness.md
docs/phases/: README.md  phase-00-foundations-canonical-schema-data-model.md  phase-00.1-canonical-schema-taxonomies.md  phase-00.2-data-model-migrations.md  phase-00.3-tenancy-config-versioning.md  phase-00.5-authentication-identity.md  phase-00.6-secrets-management.md  phase-01-file-ingestion-structure-detection.md  phase-01.1-object-storage-ingestion.md  phase-01.2-parsing-structure-detection.md  phase-01.3-profiling.md  phase-01.4-large-file-path-ingestion.md  phase-02-mapping-engine-saved-configs.md  phase-02.1-mapping-engine.md  phase-02.2-saved-configs-matching.md  phase-03-transformation-rule-engine.md  phase-03.1-rule-engine-core.md  phase-03.2-value-ops-preview-api.md  phase-04-validation-anomaly-detection.md  phase-04.1-validation-engine.md  phase-04.2-anomaly-review-api.md  phase-05-ai-suggestion-layer.md  phase-05.1-llm-cost-controls.md  phase-05.1-llm-provider-config.md  phase-05.2-suggestion-service-api.md  phase-06-review-ui-nextjs.md  phase-06.1-ui-foundation.md  phase-06.2-job-dashboard.md  phase-06.3-mapping-review.md  phase-06.4-transformation-builder.md  phase-06.5-validation-review.md  phase-07-multitenancy-async-scale.md  phase-07.1-observability-monitoring.md  phase-07.2-resilience-error-handling.md  phase-08-governance-security.md  phase-08.1-compliance-controls.md  phase-09-future-connectors-extraction.md  phase-09.1-source-abstraction-landed-dataset.md  phase-09.2-connector-framework-credentials.md  phase-09.3-sftp-source.md  (+20 more)
front-end/: .dockerignore  .env.example  .prettierignore  CLAUDE.md  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
front-end/app/: globals.css  layout.tsx  page.tsx
front-end/app/admin/: page.tsx
front-end/app/configs/: page.tsx
front-end/app/customers/: page.tsx
front-end/app/feeds/: page.tsx
front-end/app/login/: page.tsx
front-end/app/queue/: page.tsx
front-end/app/runs/: page.tsx
front-end/app/settings/: page.tsx
front-end/app/sources/: page.tsx
front-end/app/stacks/: page.tsx
front-end/components/: app-shell.tsx  clone-dialog.tsx  coverage-meter.tsx  data-quality-score.tsx  pipeline-stepper.tsx  sidebar.tsx  theme-provider.tsx  theme-toggle.tsx  workspace-switcher.tsx
front-end/components/ai/: suggestion-card.tsx
front-end/components/collaboration/: comments-panel.tsx
front-end/components/onboarding/: add-source-wizard.tsx  customer-onboarding-wizard.tsx
front-end/components/stacks/: assemble-stack-wizard.tsx
front-end/components/transform/: rule-config.tsx
front-end/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx  data-table.tsx  dialog.tsx  feedback.tsx  table.tsx  (+6 more)
front-end/lib/: format.ts  sample.ts  session.ts  tenant.ts  use-polling.ts
front-end/prisma/: schema.prisma
front-end/public/: .gitkeep
loadtest/: PLAN.md  run_load.py
migrations/: env.py
migrations/versions/: 0a2bbd8a0d32_feed_template.py  1269e3a43857_config_lifecycle_status.py  13a354c74519_connectors_config_credential_sync_run.py  2a1855555c86_customer_workspace_fields_tier_region_.py  49e3ea7584aa_collaboration_comment_notification.py  6231cd7ca5d1_phase_0_tables.py  6f331d6d7d77_tenant_isolation_mode.py  79b5c39e3a95_tenant_settings_reporting_currency_tz_fx.py  858faf4686b1_add_sheet_columns.py  985a07a52fa0_llm_cost_usage_budget.py  a3c3e2f36cc2_phase16_stack.py  a97d5c7c23e8_auth_user_auth_cols_session_secret_ref_.py  b20c2f0d850e_runs_actor_created_by.py  b4d4f3a47dd3_phase15_cloned_from.py  c5e5a4b58ee4_phase18_job_sandbox.py  c705eaa06431_config_authorship_created_by.py  d6f6b5c69ff5_part3_validation_rule.py  d9f758ad6964_collaboration_assignment.py  e1a1c0d14aa0_phase14_io_profile.py  f2b2d1e25bb1_phase21_schema_extension.py  fe1484e4b15a_governance_audit_log.py
sampledata/: README.md  affiliate_partners.csv  email_campaigns.csv  facebook_ads_2024.csv  generate_sample_data.py  google_ads_2024.csv  messy_mixed_export.csv  meta_multi_account.xlsx  multi_channel_workbook.xlsx  ooh_billboards.csv  paid_search_weekly.xlsx  programmatic_dv360.csv  radio_buys.csv  retail_sales_offline.csv  tiktok_ads.csv  tv_spots.csv  youtube_video.csv
src/mmm_os/: __init__.py  authz.py  resilience.py
tests/: conftest.py  test_ai_api.py  test_ai_suggestions.py  test_auth.py  test_autoschedule.py  test_backup_residency.py  test_canonical.py  test_clone.py  test_collaboration.py  test_compliance.py  test_config_library.py  test_connectors.py  test_customers.py  test_dashboard.py  test_erasure.py  test_feed_templates.py  test_governance.py  test_health.py  test_ingest_by_path.py  test_ingestion.py  test_io_profile.py  test_isolation.py  test_llm_config.py  test_llm_cost.py  test_mapping_api.py  test_mapping_engine.py  test_mapping_service.py  test_models.py  test_observability.py  test_output_export.py  test_postgres_portability.py  test_processing.py  test_profiling.py  test_rbac_roles.py  test_reads.py  test_resilience.py  test_retention.py  test_routing.py  test_sandbox.py  test_scale_fairness.py  (+17 more)
(+205 files in other folders)
