[project]
name = "mmm-os"
version = "0.0.0"
description = "Marketing Data Ingestion & Transformation Platform (Mutinex DataOS–inspired)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "httpx>=0.27",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmm_os"]
# Bundle the machine-readable config resources (canonical schema + taxonomies).
artifacts = ["src/mmm_os/resources/*.yaml"]

# ---------------------------------------------------------------------------
# uv — dependency management (see CODING_STANDARDS.md)
# ---------------------------------------------------------------------------
[tool.uv]
dev-dependencies = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "httpx>=0.27",
    "types-PyYAML>=6.0",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format. Target 3.10 (code MUST run on 3.10).
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "D"]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables (Depends/File/Query/…) as argument defaults by design.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Query",
    "fastapi.Body",
    "fastapi.Path",
    "fastapi.Form",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]        # docstrings not required in tests
"migrations/*" = ["D"]   # Alembic-generated files

# ---------------------------------------------------------------------------
# mypy — type-check as strict as practical.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["migrations.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
